--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,5 +16,12 @@ indicatif = "0.17.0"
 tabled = "0.8.0"
 rand = "0.8.5"
 
-[dev-dependencies]
-cargo-husky = { version = "1.5.0", features = ["precommit-hook"] }
+[dev-dependencies.cargo-husky]
+version = "1"
+default-features = false
+features = [
+    "precommit-hook",
+    "run-cargo-test",
+    "run-cargo-clippy",
+    "run-cargo-fmt",
+]
